aws-vpc-ec2-nginx/vpc.tf
resource "aws_vpc" "vpc-ngx" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "vpc-ngx"
  }
}
